--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
   "name": "strapi-starter",
   "private": true,
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A Strapi starter",
   "scripts": {
     "develop": "strapi develop",
     "start": "strapi start",
+    "start:prod": "NODE_ENV=production strapi start",
     "build": "strapi build",
-    "strapi": "strapi"
+    "build:prod": "NODE_ENV=production strapi build",
+    "strapi": "strapi",
+    "pm2:start": "pm2 start ./ecosystem.config.js",
+    "pm2:reload": "pm2 reload ./ecosystem.config.js",
+    "pm2:stop": "pm2 stop ./ecosystem.config.js",
+    "pm2:delete": "pm2 delete ./ecosystem.config.js"
   },
   "devDependencies": {},
   "dependencies": {
