--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,20 @@
 HOST=0.0.0.0
 PORT=1337
+NODE_ENV=production
 APP_KEYS="toBeModified1,toBeModified2"
-API_TOKEN_SALT=tobemodified
-ADMIN_JWT_SECRET=tobemodified
-TRANSFER_TOKEN_SALT=tobemodified
-JWT_SECRET=tobemodified
+API_TOKEN_SALT=
+ADMIN_JWT_SECRET=
+JWT_SECRET=
+TRANSFER_TOKEN_SALT=
 # Database
 DATABASE_CLIENT=mysql2
-DATABASE_HOST=127.0.0.1
+DATABASE_HOST=localhost
 DATABASE_PORT=3306
-DATABASE_NAME=tobemodified
-DATABASE_USERNAME=tobemodified
-DATABASE_PASSWORD=tobemodified
+DATABASE_NAME=
+DATABASE_USERNAME=
+DATABASE_PASSWORD=
 DATABASE_SSL=false
 # Cloudinary
-CLOUDINARY_NAME=tobemodified
-CLOUDINARY_KEY=tobemodified
-CLOUDINARY_SECRET=tobemodified
+CLOUDINARY_NAME=
+CLOUDINARY_KEY=
+CLOUDINARY_SECRET=
