--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,6 @@ services:
     restart: unless-stopped
     env_file: .env
     environment:
-      APP_KEYS: ${APP_KEYS}
-      API_TOKEN_SALT: ${API_TOKEN_SALT}
-      ADMIN_JWT_SECRET: ${ADMIN_JWT_SECRET}
-      JWT_SECRET: ${JWT_SECRET}
-      TRANSFER_TOKEN_SALT: ${TRANSFER_TOKEN_SALT}
-      # DATABASE
       DATABASE_CLIENT: mysql2
       DATABASE_HOST: strapi_db
       DATABASE_PORT: ${DATABASE_PORT}
@@ -20,8 +14,12 @@ services:
       DATABASE_USERNAME: ${DATABASE_USERNAME}
       DATABASE_PASSWORD: ${DATABASE_PASSWORD}
       DATABASE_SSL: ${DATABASE_SSL}
-      NODE_ENV: ${NODE_ENV}
-      # CLOUDINARY
+
+      APP_KEYS: ${APP_KEYS}
+      API_TOKEN_SALT: ${API_TOKEN_SALT}
+      ADMIN_JWT_SECRET: ${ADMIN_JWT_SECRET}
+      JWT_SECRET: ${JWT_SECRET}
+
       CLOUDINARY_NAME: ${CLOUDINARY_NAME}
       CLOUDINARY_KEY: ${CLOUDINARY_KEY}
       CLOUDINARY_SECRET: ${CLOUDINARY_SECRET}
@@ -53,8 +51,8 @@ services:
       MYSQL_DATABASE: ${DATABASE_NAME}
       MYSQL_ROOT_HOST: '%'
     volumes:
-      - strapi-data:/var/lib/mysql
-      # - ./data:/var/lib/postgresql/data/ # if you want to use a bind folder
+      - strapi-db-data:/var/lib/mysql
+      # - ./strapi-db-data:/var/lib/mysql # if you want to use a bind folder
     ports:
       - '3306:3306'
     networks:
@@ -78,9 +76,9 @@ services:
       - strapi_db
 
 volumes:
-  strapi-data:
+  strapi-db-data:
 
 networks:
   strapi:
-    name: Strapi
+    name: strapi_network
     driver: bridge
