chore(.env.example): add MYSQL_ROOT_PASSWORD variable for better security chore(.gitignore): add strapi-db-data to ignore list refactor(docker-compose.yml): update MYSQL_ROOT_PASSWORD usage for consistency and security reasons

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ DATABASE_PORT=3306
 DATABASE_NAME=
 DATABASE_USERNAME=
 DATABASE_PASSWORD=
+MYSQL_ROOT_PASSWORD=
 
 APP_KEYS="toBeModified1,toBeModified2"
 API_TOKEN_SALT=
