--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,11 +45,10 @@ services:
     image: mysql:8.0
     command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     environment:
-      MYSQL_USER: ${DATABASE_USERNAME}
-      MYSQL_ROOT_PASSWORD: ${DATABASE_PASSWORD}
-      MYSQL_PASSWORD: ${DATABASE_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       MYSQL_DATABASE: ${DATABASE_NAME}
-      MYSQL_ROOT_HOST: '%'
+      MYSQL_USER: ${DATABASE_USERNAME}
+      MYSQL_PASSWORD: ${DATABASE_PASSWORD}
     volumes:
       - strapi-db-data:/var/lib/mysql
       # - ./strapi-db-data:/var/lib/mysql # if you want to use a bind folder
@@ -68,8 +67,8 @@ services:
     environment:
       PMA_HOST: strapi_db
       PMA_PORT: 3306
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       UPLOAD_LIMIT: 32M
-      MYSQL_ROOT_PASSWORD: ${DATABASE_PASSWORD}
     networks:
       - strapi
     depends_on:
